# SPM22_Acciaro_Project

./: CMakeLists.txt  Makefile  README.md  main.cpp  msg.sh  run.sh
calculate_results/: calculate_results.cpp  calculate_results.h  plot_1_speedup.cpp  plot_1_speedup.h  plot_2_scalability.cpp  plot_2_scalability.h  plot_3_efficiency.cpp  plot_3_efficiency.h  plot_4_barrier_overhead.cpp  plot_4_barrier_overhead.h  plot_5_theads_overhead.cpp  plot_5_theads_overhead.h
results/: plot_1_speedup_1024.csv  plot_1_speedup_16384.csv  plot_1_speedup_4096.csv  plot_2_scalability_1024.csv  plot_2_scalability_16384.csv  plot_2_scalability_4096.csv  plot_3_efficiency_1024.csv  plot_3_efficiency_16384.csv  plot_3_efficiency_4096.csv  plot_4_barrier_overhead_1024.csv  plot_4_barrier_overhead_16384.csv  plot_4_barrier_overhead_4096.csv  plot_5_theads_overhead_1024.csv  plot_5_theads_overhead_16384.csv  plot_5_theads_overhead_4096.csv
setup/: constants.h  runtime_steps.cpp  runtime_steps.h
solutions/: fast_flow.cpp  fast_flow.h  parallel_threads.cpp  parallel_threads.h  sequential.cpp  sequential.h
unit_tests/: UnitTestManager.cpp  UnitTestManager.h  unit_test_utils.cpp  unit_test_utils.h
unit_tests/solutions/: test_fastflow.cpp  test_fastflow.h  test_parallel_threads.cpp  test_parallel_threads.h  test_sequential.cpp  test_sequential.h
unit_tests/test_utils/: test_eucl_dist.cpp  test_eucl_dist.h  test_init_matrix_random_strictly_dominant.cpp  test_init_matrix_random_strictly_dominant.h  test_norm2.cpp  test_norm2.h
utils/: argument_parser.cpp  argument_parser.h  initializations.cpp  initializations.h  utility.cpp  utility.h  utimer.cpp  utimer.h
utils/useful_classes/: SolutionResult.h
